--- a/docs/docs/concepts.mdx
+++ b/docs/docs/concepts.mdx
@@ -526,7 +526,7 @@ Read [this guide](/docs/concepts/#aimessage) for more information on what the re
 
 Once the chosen tools are invoked, the results can be passed back to the model so that it can complete whatever task
 it's performing.
-There are generally two different ways to invoke the tool and pass back the response
+There are generally two different ways to invoke the tool and pass back the response:
 
 #### Invoke with just the arguments
 
