Fix image/video to embedding

--- a/docs/docs/integrations/vectorstores/vdms.ipynb
+++ b/docs/docs/integrations/vectorstores/vdms.ipynb
@@ -13,6 +13,7 @@
     "* K nearest neighbor search\n",
     "* Euclidean distance (L2) and inner product (IP)\n",
     "* Libraries for indexing and computing distances: TileDBDense, TileDBSparse, FaissFlat (Default), FaissIVFFlat, Flinng\n",
+    "* Embeddings for text, images, and video\n",
     "* Vector and metadata searches\n",
     "\n",
     "VDMS has server and client components. To setup the server, see the [installation instructions](https://github.com/IntelLabs/vdms/blob/master/INSTALL.md) or use the [docker image](https://hub.docker.com/r/intellabs/vdms).\n",
@@ -62,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6fec470578947af79954aaf6bd8698566636c7402f5c5f567d559568c05c4e86\n"
+      "816479819a8e7ab808056392646ffe43d63be62e706d3c8852716e291a8e56b0\n"
      ]
     }
    ],
@@ -92,6 +93,9 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from langchain_community.document_loaders.text import TextLoader\n",
     "from langchain_community.vectorstores import VDMS\n",
@@ -171,21 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Documents: 42\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data3/cwlacewe/apps/cwlacewe.langchain_pr/.langchain-venv/lib/python3.11/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm, trange\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "# Documents: 42\n",
       "# Embedding Dimensions: 768\n"
      ]
     }
@@ -1204,6 +1194,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1214,6 +1214,14 @@
    "source": [
     "!docker kill vdms_vs_test_nb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a60725a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
