Fix lint issues

--- a/cookbook/multi_modal_RAG_vdms.ipynb
+++ b/cookbook/multi_modal_RAG_vdms.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fc342ce08b4c8e4d861d6952ba2b741e00ea6bf6230f8c3ecfe2881faae9a4a9\n"
+      "a1b9206b08ef626e15b356bf9e031171f7c7eb8f956a2733f196f0109246fe2b\n"
      ]
     }
    ],
@@ -461,12 +461,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The image is a black and white photograph featuring a woman standing with three children. The woman appears to be in her thirties, wearing a long-sleeved dress and holding one of the children by the hand. The setting seems to be outdoors, as there are trees visible in the background.\n",
-      "\n",
-      "The historical context of this image is that it was taken by Dorothea Lange in March 1936 as part of her \"Destitute\" series, which documented the poverty and suffering of American families during the Great Depression. The photo was initially regretted by the woman, Florence Owens Thompson, a Cherokee from Oklahoma, because she felt it did not portray her in a positive light. However, her daughter Katherine later said that the photograph was an accurate representation of their situation at that time.\n",
-      "\n",
-      "The symbolism and meaning of this image lie in its depiction of poverty and hardship during the Great Depression. The woman's somber expression and the children's attire suggest a lack of resources and difficulty making ends meet. The image serves as a powerful testament to the social and economic conditions of that era, and it continues to be relevant today as a reminder of the struggles faced by many people during times of crisis.\n",
-      "In terms of connections with related text, the photograph is part of Dorothea Lange's \"Destitute\" series, which was created to document the effects of the Great Depression on American families. The image also connects with the related text provided, as it mentions Florence Owens Thompson and her daughter Katherine's perspective on the photograph. \n"
+      " The image depicts a woman with several children. The woman appears to be of Cherokee heritage, as suggested by the text provided. The image is described as having been initially regretted by the subject, Florence Owens Thompson, due to her feeling that it did not accurately represent her leadership qualities.\n",
+      "The historical and cultural context of the image is tied to the Great Depression and the Dust Bowl, both of which affected the Cherokee people in Oklahoma. The photograph was taken during this period, and its subject, Florence Owens Thompson, was a leader within her community who worked tirelessly to help those affected by these crises.\n",
+      "The image's symbolism and meaning can be interpreted as a representation of resilience and strength in the face of adversity. The woman is depicted with multiple children, which could signify her role as a caregiver and protector during difficult times.\n",
+      "Connections between the image and the related text include Florence Owens Thompson's leadership qualities and her regretted feelings about the photograph. Additionally, the mention of Dorothea Lange, the photographer who took this photo, ties the image to its historical context and the broader narrative of the Great Depression and Dust Bowl in Oklahoma. \n"
      ]
     }
    ],
