remove wrong argument

--- a/cookbook/rag_with_quantized_embeddings.ipynb
+++ b/cookbook/rag_with_quantized_embeddings.ipynb
@@ -377,7 +377,7 @@
     "model_id = \"Intel/neural-chat-7b-v3-3\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "model = IPEXModelForCausalLM.from_pretrained(\n",
-    "    model_id, device_map=\"auto\", torch_dtype=torch.bfloat16, export=True\n",
+    "    model_id, torch_dtype=torch.bfloat16, export=True\n",
     ")\n",
     "\n",
     "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, max_new_tokens=100)\n",
