--- a/docs/docs/integrations/llm_caching.ipynb
+++ b/docs/docs/integrations/llm_caching.ipynb
@@ -26,7 +26,7 @@
     "from langchain_openai import OpenAI\n",
     "\n",
     "# To make the caching really obvious, lets use a slower model.\n",
-    "llm = OpenAI(model_name=\"gpt-3.5-turbo-instruct\", n=2, best_of=2,openai_api_key='OPEN-AI-KEY')"
+    "llm = OpenAI(model_name=\"gpt-3.5-turbo-instruct\", n=2, best_of=2)"
    ]
   },
   {
