langchain-aws InMemoryVectorStore documentation updates

--- a/docs/docs/integrations/vectorstores/memorydb.ipynb
+++ b/docs/docs/integrations/vectorstores/memorydb.ipynb
@@ -71,9 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_aws.embeddings import BedrockEmbeddings\n",
     "\n",
-    "embeddings = OpenAIEmbeddings()"
+    "embeddings = BedrockEmbeddings()"
    ]
   },
   {
