--- a/docs/docs/integrations/platforms/aws.mdx
+++ b/docs/docs/integrations/platforms/aws.mdx
@@ -198,12 +198,9 @@ See a [usage example](/docs/integrations/vectorstores/documentdb).
 from langchain.vectorstores import DocumentDBVectorSearch
 ```
 ### Amazon MemoryDB 
-[Amazon MemoryDB](https://aws.amazon.com/memorydb/) MemoryDB is a durable, in-memory database service that delivers ultra-fast performance. MemoryDB is compatible with Redis OSS, a popular open source data store, 
+[Amazon MemoryDB](https://aws.amazon.com/memorydb/) is a durable, in-memory database service that delivers ultra-fast performance. MemoryDB is compatible with Redis OSS, a popular open source data store, 
 enabling you to quickly build applications using the same flexible and friendly Redis OSS APIs, and commands that they already use today. 
 
-AWS offers services for computing, databases, storage, analytics, and other functionality. For an overview of all AWS services, see [Cloud Computing with Amazon Web Services](https://aws.amazon.com/what-is-aws/).
-
-See a [usage example](/docs/integrations/vectorstores/memorydb).
 InMemoryVectorStore class provides a vectorstore to connect with Amazon MemoryDB.
 
 ```python
@@ -217,6 +214,8 @@ vds = InMemoryVectorStore.from_documents(
             index_name=INDEX_NAME,
         )
 ```
+See a [usage example](/docs/integrations/vectorstores/memorydb).
+
 ## Retrievers
 
 ### Amazon Kendra
