--- a/docs/docs/integrations/text_embedding/textembed.ipynb
+++ b/docs/docs/integrations/text_embedding/textembed.ipynb
@@ -71,7 +71,7 @@
     "embeddings = TextEmbedEmbeddings(\n",
     "    model=\"sentence-transformers/all-MiniLM-L12-v2\",\n",
     "    api_url=\"http://0.0.0.0:8000/v1\",\n",
-    "    api_key=\"TextEmbed\"\n",
+    "    api_key=\"TextEmbed\",\n",
     ")"
    ]
   },
@@ -94,7 +94,7 @@
     "    \"Artificial intelligence is transforming various industries.\",\n",
     "    \"Cloud computing provides scalable computing resources over the internet.\",\n",
     "    \"Big data analytics helps in understanding large datasets.\",\n",
-    "    \"India has a diverse cultural heritage.\"\n",
+    "    \"India has a diverse cultural heritage.\",\n",
     "]\n",
     "\n",
     "# Define a query\n",
