--- a/docs/docs/contributing/integrations/community.mdx
+++ b/docs/docs/contributing/integrations/community.mdx
@@ -11,6 +11,18 @@ Before beginning, make sure you have read about the different types of integrati
 
 In the following sections, we'll walk through how to contribute to each of these packages from a fake company, `Parrot Link AI`.
 
+## What is a community integration
+
+Community integrations 
+
+## Why contribute a community integration
+
+## How to contribute a community integration
+
+
+
+To begin, make sure you have all the dependencies outlined in guide on [Contributing Code](/docs/contributing/code/).
+
 The `langchain-community` package is in `libs/community` and contains most integrations.
 
 It can be installed with `pip install langchain-community`, and exported members can be imported with code like 
