--- a/docs/docs/contributing/integrations/index.mdx
+++ b/docs/docs/contributing/integrations/index.mdx
@@ -17,27 +17,55 @@ understand the different types of integrations and how to contribute them.
 
 In this document, you will find guides for the following types of integrations:
 
-import { IntegrationsTable } from '@theme/Integrations';
-
-<IntegrationsTable />
-
-## Community Integrations
-
-Community integrations exist as part of the `langchain-community` package on Pypi,
-and the source code is hosted out of the 
-[`libs/community` directory](https://github.com/langchain-ai/langchain/tree/master/libs/community) 
-in the monorepo.
-
-:::success
-Almost all new integrations in LangChain are community integrations!
-
-If you are contributing a *new* integration, start here!
-:::
-
-## Packages
-
-### Shared Packages
-
-### Monorepo Packages
-
-### External Packages
+<table style={{textAlign: "center"}}>
+  <tr>
+    <th rowspan="2">Type</th>
+    <th rowspan="2">Community</th>
+    <th colspan="3">Package in</th>
+  </tr>
+  <tr>
+    <th>Shared repo</th>
+    <th>LangChain repo</th>
+    <th>External repo</th>
+  </tr>
+  <tr>
+    <th>Package</th>
+    <td>
+      <a href="https://pypi.org/project/langchain-community"
+        ><code>langchain-community</code></a
+      >
+    </td>
+    <td colspan="3"><code>langchain-[partner]</code></td>
+  </tr>
+  <tr>
+    <th>Updates</th>
+    <td>Community</td>
+    <td colspan="3">Partner</td>
+  </tr>
+  <tr>
+    <th>Releases</th>
+    <td>LangChain</td>
+    <td>Partner &amp; LangChain</td>
+    <td>LangChain</td>
+    <td>Partner</td>
+  </tr>
+  <tr>
+    <th>Maintenance Help</th>
+    <td>✅</td>
+    <td>✅</td>
+    <td>✅</td>
+    <td>❌</td>
+  </tr>
+  <tr>
+    <th>Integration Testing</th>
+    <td>❌</td>
+    <td>✅</td>
+    <td>✅</td>
+    <td>⚠️</td>
+  </tr>
+  <tr>
+    <th>Guide</th>
+    <td><a href="./community.mdx">Community Integration Guide</a></td>
+    <td colspan="3"><a href="./package.mdx">Package Guide</a></td>
+  </tr>
+</table>
