--- a/docs/docs/contributing/integrations/package.mdx
+++ b/docs/docs/contributing/integrations/package.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 3
-sidebar_label: Monorepo Package
+sidebar_position: 2
+sidebar_label: Package
 ---
 
 # Contribute Monorepo Packages
@@ -12,6 +12,9 @@ Before beginning, make sure you have read about the different types of integrati
 :::caution
 Before starting a **partner** package, please confirm your intent with the LangChain team. Partner packages require more maintenance as separate packages, so we will close PRs that add new partner packages without prior discussion. See the above section for how to add a community integration.
 :::
+
+
+To begin, make sure you have all the dependencies outlined in guide on [Contributing Code](/docs/contributing/code/).
 
 Partner packages can be hosted in the `LangChain` monorepo or in an external repo.
 
