--- a/docs/docs/how_to/installation.mdx
+++ b/docs/docs/how_to/installation.mdx
@@ -58,7 +58,7 @@ To install one of these run:
 pip install langchain-openai
 ```
 
-Any integrations that haven't been split out into their own packages will live in the `langchain-community`. Install with:
+Any integrations that haven't been split out into their own packages will live in the `langchain-community` package. Install with:
 
 ```bash
 pip install langchain-community
