--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -1,80 +1,113 @@
 {
- "cells": [
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Yi\n",
-    "\n",
-    "[01.AI](https://platform.01.ai/), founded by Dr. Kai-Fu Lee, is a global company dedicated to building cutting-edge technology and software applications for large-scale models in the AI 2.0 era, with Yi-Large models with hundreds of billions of parameters, multimodal models, an open API platform, and open-source models such as Yi-34B/9B/6B and Yi-VL for the world.\n",
-    "\n",
-    "This example demonstrates how to use LangChain to interact with Yi."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_community.llms.yi import Yi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "# Generate your API key from: https://platform.01.ai (https://platform.lingyiwanwu.com)/\n",
-    "os.environ[\"YI_API_KEY\"] = \"YOUR_YI_API_KEY\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = Yi()\n",
-    "# or use a specific model\n",
-    "# Available models: Check https://platform.01.ai/ for the latest models\n# or you can click here https://platform.lingyiwanwu.com/",
-    "# llm = Yi(model=\"yi-large\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prompt the model\n",
-    "llm.invoke(\"What are the main differences between machine learning and deep learning?\")"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+"cells": [
+{
+"cell_type": "raw",
+"metadata": {},
+"source": [
+"---\n",
+"sidebar_label: YiLLM\n",
+"---"
+]
+},
+{
+"cell_type": "markdown",
+"metadata": {},
+"source": [
+"# YiLLM\n",
+"\n",
+"01.AI, founded by Dr. Kai-Fu Lee, is a global company at the forefront of AI 2.0. They offer cutting-edge large language models, including the Yi series, which range from 6B to hundreds of billions of parameters. 01.AI also provides multimodal models, an open API platform, and open-source options like Yi-34B/9B/6B and Yi-VL."
+]
+},
+{
+"cell_type": "markdown",
+"metadata": {},
+"source": [
+"## Installation\n",
+"\n",
+"To use YiLLM, you need to install the langchain-community package:"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {},
+"outputs": [],
+"source": [
+"%pip install -qU langchain-community"
+]
+},
+{
+"cell_type": "markdown",
+"metadata": {},
+"source": [
+"## Prerequisite\n",
+"\n",
+"An API key is required to access Yi LLM API. Visit https://www.lingyiwanwu.com/ to get your API key. When applying for the API key, you need to specify whether it's for domestic (China) or international use."
+]
+},
+{
+"cell_type": "markdown",
+"metadata": {},
+"source": [
+"## Usage"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {},
+"outputs": [],
+"source": [
+"import os\n",
+"\n",
+"os.environ["YI_API_KEY"] = "YOUR_API_KEY"\n",
+"\n",
+"from langchain_community.llms import YiLLM\n",
+"\n",
+"# Load the model\n",
+"llm = YiLLM(model="yi-34b-chat")\n",
+"\n",
+"# You can specify the region if needed (default is "auto")\n",
+"# llm = YiLLM(model="yi-34b-chat", region="domestic") # or "international"\n",
+"\n",
+"# Basic usage\n",
+"res = llm.invoke("What's your name?")\n",
+"print(res)\n",
+"\n",
+"# Generate method\n",
+"res = llm.generate(prompts=["Explain the concept of large language models.", "What are the potential applications of AI in healthcare?"])\n",
+"print(res)\n",
+"\n",
+"# Streaming\n",
+"for chunk in llm.stream("Describe the key features of the Yi language model series."):\n",
+" print(chunk, end="", flush=True)\n",
+"\n",
+"# Asynchronous streaming\n",
+"import asyncio\n",
+"\n",
+"async def run_aio_stream():\n",
+" async for chunk in llm.astream("Write a brief on the future of AI according to Dr. Kai-Fu Lee's vision."):\n",
+" print(chunk, end="", flush=True)\n",
+"\n",
+"asyncio.run(run_aio_stream())\n",
+"\n",
+"# Adjusting parameters\n",
+"llm_with_params = YiLLM(\n",
+" model="yi-34b-chat",\n",
+" temperature=0.7,\n",
+" top_p=0.9,\n",
+")\n",
+"\n",
+"res = llm_with_params("Propose an innovative AI application that could benefit society.")\n",
+"print(res)"
+]
+}
+],
+"metadata": {
+"language_info": {
+"name": "python"
+}
+},
+"nbformat": 4,
+"nbformat_minor": 2
 }
