--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -1,30 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "sidebar_label: YiLLM\n",
-    "---"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# YiLLM\n",
-    "\n",
+    "# Yi LLM\n",
     "[01.AI](https://www.lingyiwanwu.com/en), founded by Dr. Kai-Fu Lee, is a global company at the forefront of AI 2.0. They offer cutting-edge large language models, including the Yi series, which range from 6B to hundreds of billions of parameters. 01.AI also provides multimodal models, an open API platform, and open-source options like Yi-34B/9B/6B and Yi-VL."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Installation\n",
-    "\n",
-    "To use YiLLM, you need to install the `langchain-community` package:"
    ]
   },
   {
@@ -33,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Installing the langchain packages needed to use the integration\n",
     "%pip install -qU langchain-community"
    ]
   },
@@ -41,7 +23,6 @@
    "metadata": {},
    "source": [
     "## Prerequisite\n",
-    "\n",
     "An API key is required to access Yi LLM API. Visit https://www.lingyiwanwu.com/ to get your API key. When applying for the API key, you need to specify whether it's for domestic (China) or international use."
    ]
   },
@@ -49,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage"
+    "## Use Yi LLM"
    ]
   },
   {
@@ -72,16 +53,37 @@
     "\n",
     "# Basic usage\n",
     "res = llm.invoke(\"What's your name?\")\n",
-    "print(res)\n",
-    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generate method\n",
     "res = llm.generate(prompts=[\"Explain the concept of large language models.\", \"What are the potential applications of AI in healthcare?\"])\n",
-    "print(res)\n",
-    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Streaming\n",
     "for chunk in llm.stream(\"Describe the key features of the Yi language model series.\"):\n",
-    "    print(chunk, end=\"\", flush=True)\n",
-    "\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Asynchronous streaming\n",
     "import asyncio\n",
     "\n",
@@ -89,11 +91,18 @@
     "    async for chunk in llm.astream(\"Write a brief on the future of AI according to Dr. Kai-Fu Lee's vision.\"):\n",
     "        print(chunk, end=\"\", flush=True)\n",
     "\n",
-    "asyncio.run(run_aio_stream())\n",
-    "\n",
+    "asyncio.run(run_aio_stream())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adjusting parameters\n",
     "llm_with_params = YiLLM(\n",
-    "    model=\"yi-34b-chat\",\n",
+    "    model=\"yi-large\",\n",
     "    temperature=0.7,\n",
     "    top_p=0.9,\n",
     ")\n",
