--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -46,10 +46,10 @@
     "from langchain_community.llms import YiLLM\n",
     "\n",
     "# Load the model\n",
-    "llm = YiLLM(model=\"yi-34b-chat\")\n",
+    "llm = YiLLM(model=\"yi-large\")\n",
     "\n",
     "# You can specify the region if needed (default is \"auto\")\n",
-    "# llm = YiLLM(model=\"yi-34b-chat\", region=\"domestic\")  # or \"international\"\n",
+    "# llm = YiLLM(model=\"yi-large\", region=\"domestic\")  # or \"international\"\n",
     "\n",
     "# Basic usage\n",
     "res = llm.invoke(\"What's your name?\")\n",
