--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from langchain_community.chat_models import YiChat\n",
+        "from langchain_community.chat_models import ChatYi\n",
         "from langchain.schema import HumanMessage, SystemMessage, AIMessage"
       ],
       "metadata": {
@@ -61,6 +61,13 @@
         "# For a specific model, you can use:\n",
         "# chat = YiChat(model=\"yi-large\")\n",
         "# Check https://platform.01.ai/ or https://platform.lingyiwanwu.comfor the latest available models"
+        "# Default China URL"
+        "# But you can switch to a global region"
+        "# chat_global = ChatYi(api_key="your_api_key_here", region="global"),"
+        "# chat_custom = ChatYi(
+        "# api_key="your_api_key_here",
+        "# yi_api_base="https://your-custom-api-base-url.com,"
+        "# )"
       ],
       "metadata": {
         "id": "UuahXmiykpP2"
