--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -63,11 +63,8 @@
         "# Check https://platform.01.ai/ or https://platform.lingyiwanwu.comfor the latest available models"
         "# Default China URL"
         "# But you can switch to a global region"
-        "# chat_global = ChatYi(api_key="your_api_key_here", region="global"),"
-        "# chat_custom = ChatYi(
-        "# api_key="your_api_key_here",
-        "# yi_api_base="https://your-custom-api-base-url.com,"
-        "# )"
+        "# chat_global = ChatYi(api_key="your_api_key_here", region="global")",
+        "# chat_custom = ChatYi(api_key="your_api_key_here",yi_api_base="https://your-custom-api-base-url.com,")",
       ],
       "metadata": {
         "id": "UuahXmiykpP2"
