--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -56,15 +56,14 @@
       "cell_type": "code",
       "source": [
         "# Initialize the Yi Chat model\n",
-        "chat = YiChat()\n",
+        "chat = ChatYi()\n",
         "\n",
+        "# Default China URL",
+        "# But you can switch to a global region",
         "# For a specific model, you can use:\n",
-        "# chat = YiChat(model=\"yi-large\")\n",
+        "# chat = ChatYi(model=\"yi-large\",api_key="your_api_key_here",region="global")\n",
         "# Check https://platform.01.ai/ or https://platform.lingyiwanwu.comfor the latest available models"
-        "# Default China URL"
-        "# But you can switch to a global region"
-        "# chat_global = ChatYi(api_key="your_api_key_here", region="global")",
-        "# chat_custom = ChatYi(api_key="your_api_key_here",yi_api_base="https://your-custom-api-base-url.com,")",
+        
       ],
       "metadata": {
         "id": "UuahXmiykpP2"
