--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -61,7 +61,7 @@
         "# Default China URL",
         "# But you can switch to a global region",
         "# For a specific model, you can use:\n",
-        "# chat = ChatYi(model=\"yi-large\",api_key="your_api_key_here",region="global")\n",
+        "# chat = ChatYi(model=\"yi-large\",api_key=\"your_api_key_here\",region=\"global\")\n",
         "# Check https://platform.01.ai/ or https://platform.lingyiwanwu.comfor the latest available models"
         
       ],
